# TheOpenPresenter

./: .dockerignore  .env.ci  .env.dev  .eslintignore  .gitattributes  .gitignore  .yarnrc.yml  README.md  SECURITY.md  docker-compose-infra.yml  docker-compose-prod.yml  docker-compose.yml  migrator.Dockerfile  package.json  production.Dockerfile  tagging.md  tsconfig.json  turbo.json  vitest.config.ts
.github/: uncloud.yaml
.github/scripts/: staging-setup.sh
.github/workflows/: build-and-staging-ci.yml  cla.yml  db-docker-build.yml  desktop-screen.yml  dev-workflow-test.yml  electron-screen.yml  native-screen.yml  playwright-tauri.yml  playwright.yml  server-docker-build.yml  staging-environment.yml  tauri.yml  test.yml  vega-screen.yml
apps/astro/: README.md  astro.config.mjs  package.json
apps/homepage/: .gitignore  .prettierrc.json  AGENTS.md  astro.config.mjs  (+3 more)
apps/homepage-astro/: astro.config.mjs  package.json
data/: schema.graphql  schema.sql
e2e/: README.md  e2eCommand.ts  package.json  playwright.config.ts  playwright.tauri.config.ts
native-apps/desktop-screen/src-tauri/: Cargo.toml  tauri.conf.json
native-apps/desktop-screen/src-tauri/capabilities/: default.json
native-apps/desktop-screen/src-tauri/icons/: icon.icns
native-apps/desktop-screen/src-tauri/src/: host.rs  lib.rs  main.rs  monitor.rs  pairing.rs  platform.rs  session.rs  state.rs  tray.rs  window.rs
patches/: @hocuspocus+server+2.13.5.patch  @hocuspocus+server+2.13.7.patch  @hocuspocus+server+2.14.0.patch  @tus+s3-store+1.6.2.patch  README.md  graphql+15.9.0.patch  pkgroll+2.5.1.patch  tus-js-client+4.2.3.patch  tus-js-client+5.0.0-pre1.patch  use-disposable+1.0.4.patch  vite+5.3.5.patch  vite-express+0.17.0.patch  vite-express+0.21.1.patch  vite-plugin-externalize-dependencies+0.13.0.patch  vite-tsconfig-paths+6.0.0-beta.4.patch
postgresExtensions/: Makefile  PostgresDockerfile  pg_uuidv7.c  pg_uuidv7.control
public/: CLA.md
scripts/: _setup_utils.js  clean.js  local-dev.mjs  panda.js  run-docker-with-env.js  setup_db.js  setup_env.js  start.js  test.js
tauri/: .gitignore  .taurignore  Cargo.toml  README.md  entitlements.plist  override.wsx  package.json  tauri.conf.json  tsconfig.json  vite.config.ts
tauri/capabilities/: default.json
tauri/frontend/: index.html
tauri/frontend/src/: main.ts
tauri/frontendDist/: index.html  splashscreen.html
tauri/icons/: icon.icns
tauri/node-server/: .gmrc  package.json  run_pg.mjs  run_server.mjs
tauri/node-server/script/: copy_pg_extension.mjs  download_nodejs.mjs  install_pg_extensions.mjs  symlink_top.mjs
tauri/patches/: embedded-postgres+17.4.0-beta.15.patch
tauri/src/: iroh_commands.rs  lib.rs  main.rs  renderer_commands.rs
tauri/src/iroh_bridge/: mod.rs  utils.rs
(+1313 files in other folders)
