[package]
name = "theopenpresenter-app"
version = "0.1.0"
description = "Desktop build of TheOpenPresenter"
authors = ["vija02"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "theopenpresenter_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2"
notify-rust = "4.11.5"
tauri-plugin-localhost = "2"
tauri-plugin-log = "2"
reqwest = { version = "0.12.15", features = ["json"] }
tokio = { version = "1.44.1", features = ["full"] }

# Iroh networking
iroh = "0.95.1"
iroh-base = "0.95.1"
iroh-tickets = "0.2.0"
anyhow = "1.0"
futures-lite = "2.6"
tracing = "0.1"
tracing-subscriber = "0.3.0"
rand = "0.9"
quinn = { version = "0.14", package = "iroh-quinn" }
tokio-util = "0.7.10"

