[package]
name = "desktop-screen"
version = "0.1.0"
description = "Desktop kiosk screen for TheOpenPresenter"
authors = ["vija02"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "desktop_screen_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Enable the v2 system-tray APIs
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
# Persists user settings to disk.
tauri-plugin-store = "2"
# Toggles the OS-level "start on boot" entry from JS.
tauri-plugin-autostart = "2"
# A second `theopenpresenter` invocation routes to the running instance
tauri-plugin-single-instance = "2"
# Esc-to-hide while the main render window has focus.
tauri-plugin-global-shortcut = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"
anyhow = "1"

# Linux: Needed so we can support mute
[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = { version = "=2.0.2", features = ["v2_30"] }

# Windows: Needed so we can support mute
[target.'cfg(windows)'.dependencies]
webview2-com = "0.38"
windows = "0.61"
